# actix-mongodb-jwt-template

./: .env.default  Cargo.toml  Dockerfile  docker-compose.yml  readme.md
src/: controller.rs  lib.rs  repository.rs  routes.rs  schema.rs  util.rs
src/auth/: middleware.rs  mod.rs
src/controller/: auth_controller.rs  database.rs  mod.rs  user_controller.rs
src/manager/: database.rs  mod.rs
src/repository/: user_repo.rs
src/routes/: auth.rs
src/schema/: jwt.rs  user.rs
src/util/: bool_ext.rs  env.rs  time.rs
src/web/: error.rs  mod.rs
