[package]
name = "actix-mongo-jwt-web-template"
version = "0.1.0"
edition = "2021"
default-run = "main"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "bin/main.rs"

[dependencies]
anyhow = "1"
dotenv = "0"

actix-cors = { version = "0", features = [] }
actix-rt = { version = "2", features = [] }
actix-multipart = "0"
actix-web = { version = "4", features = ["rustls", "macros"], default-features = false }
jsonwebtoken = "8"

chrono = { version = "0", features = ["serde"] }

mongodb = "2"

base64 = { version = "0", optional = true }
bcrypt = "0"
futures = "0"
log = { version = "0", features = ["release_max_level_debug"] }
tracing = "0"
tracing-subscriber = "0"

serde = { version = "=1.0.136", features = ["derive"] }
lazy_static = "1"

tokio-rayon = "2"

[profile.release]
lto = "thin"

[features]
default = []
basic-auth = ["base64"]
linux = ["actix-rt/tokio-uring", "actix-web/experimental-io-uring"]
static-jwt-secret = []